<?xml version="1.0"?>
<package>
  <name>create2_controller</name>
  <version>0.0.1</version>
  <description>Simple controller for iRobot Create2</description>

  <maintainer email="whoenig@usc.edu">Wolfgang Hoenig</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/USC-ACTLab/create2_ros</url>
  <url type="bugtracker">https://github.com/USC-ACTLab/create2_ros/issues</url>

  <author email="whoenig@usc.edu">Wolfgang Hoenig</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>control_toolbox</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
