<?xml version="1.0"?>
<package>
  <name>create2_cpp</name>
  <version>0.0.1</version>
  <description>CPP interface for iRobot Create2</description>

  <maintainer email="whoenig@usc.edu">Wolfgang Hoenig</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/USC-ACTLab/create2_ros</url>
  <url type="bugtracker">https://github.com/USC-ACTLab/create2_ros/issues</url>

  <author email="whoenig@usc.edu">Wolfgang Hoenig</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>serial</build_depend>
  <run_depend>serial</run_depend>
</package>
