<?xml version="1.0"?>
<package>
  <name>create2_driver</name>
  <version>0.0.1</version>
  <description>The create2_driver package</description>

  <maintainer email="whoenig@usc.edu">Wolfgang Hoenig</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>create2_cpp</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>create2_cpp</run_depend>

</package>
